<resources>
    <string name="server_client_id">16201877371-0gt1lhne8ksce8fo7lfgkkj18q89coo7.apps.googleusercontent.com</string>

    <!-- Notificaiton Channel -->
    <string name="notification_channel">Now Playing</string>

    <!-- Notification actions -->
    <string name="notification_skip_to_previous">Skip to previous track</string>
    <string name="notification_skip_to_next">Skip to next track</string>
    <string name="notification_play">Play</string>
    <string name="notification_pause">Pause</string>
    <string name="pref_key_skip_backward">pref_key_skip_backward</string>
    <string name="pref_key_skip_forward">pref_key_skip_forward</string>
    <string name="search">جستجو</string>
    <string name="podcast">‌پادکست‌ها</string>
    <string name="_1_0x">1.0x</string>
    <string name="the_bests">چارت پرشنوده‌ها</string>
    <string name="the_newest">به ترتیب زمان انتشار</string>
    <string name="update">بروزرسانی</string>
    <string name="exit">خروج</string>
    <string name="new_version_alert">برای ادامه کار با اپلیکیشن, نسخه جدید را دریافت کنید</string>
    <string name="signout">خروج از اکانت</string>
    <string name="dark_them">تغییر تم</string>
    <string name="retry">تلاش مجدد</string>
    <string name="is_not_downloaded_episode">هیچ اپیزودی دانلود نشده است</string>
    <string name="is_not_bookmark_episode">هیچ اپیزودی بوکمارت نشده است</string>
    <string name="error_to_get_bookmarks">درحین دریافت بوکمارک‌ها مشکلی پیش آمده است</string>
    <string name="error_to_get_episodes">درحین دریافت اپیزودها مشکلی پیش آمده است</string>
    <string name="login_error">درحین فرایند لاگین مشکلی پیش آمده است</string>
    <string name="remove">حذف</string>
    <string name="cancel">انصراف</string>
    <string name="init_timer">00:00/00:00</string>
    <string name="not_found_episode">اپیزودی پیدا نشد</string>
    <string name="login">ورود</string>
    <string name="show_all">نمایش همه</string>
</resources>
