<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="10dp"
    android:paddingTop="10dp">

    <TextView
        android:id="@+id/removeDialogTitle"
        style="@style/TextAppearance.AppCompat.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_8"
        android:layout_marginStart="@dimen/margin_8"
        android:layout_marginTop="@dimen/margin_8"
        android:fontFamily="@font/traffic"
        android:gravity="right"
        android:text="@string/new_version_alert"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/title_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/removeButton"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_8"
        android:layout_marginStart="@dimen/margin_8"
        android:layout_marginTop="48dp"
        android:background="@color/colorPrimaryDark"
        android:fontFamily="@font/traffic"
        android:text="@string/remove"
        android:textColor="@color/colorTextSecondary"
        android:textSize="@dimen/subtitle_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.77"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/removeDialogTitle" />

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_8"
        android:layout_marginStart="@dimen/margin_8"
        android:layout_marginTop="48dp"
        android:background="@color/colorPrimaryDark"
        android:fontFamily="@font/traffic"
        android:text="@string/cancel"
        android:textColor="@color/colorTextSecondary"
        android:textSize="@dimen/subtitle_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.23"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/removeDialogTitle" />
</androidx.constraintlayout.widget.ConstraintLayout>